[tool.poetry]
name = "pbc"
version = "0.1.0"
description = "pbc is a project that I create a blockchain wih Python for Proof of concept"
authors = ["hong <j50508@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
